--- a/style.css
+++ b/style.css
@@ -97,5 +97,5 @@ footer img {
     width: 100px;
     height: 100px;
     border-radius: 50% 0 0 0;
-    box-shadow: 10px 10px #1a2746;
+    box-shadow: 10px 10px #1a2746, 20px 20px #535353, 30px 30px #ff000040;
 }
